# jane

./: .gitignore  README.md  pyproject.toml
jane/: __init__.py  __main__.py
jane/cli/: __init__.py  log.py
jane/compiler/: cffi_embed.py  pyc_packager.py
