[tool.poetry]
name = "jane"
version = "0.1.0"
description = "Just A Normal Executable - Python project executable compiler"
authors = ["Slavfox <slavfoxman@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
cffi = "^1.13.2"
colorama = "^0.4.3"
crayons = "^0.3.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
mypy = { version = "^0.740.0", markers = "platform_python_implementation == 'cpython'"}
pytest = "^5.3.3"

[tool.poetry.scripts]
jane = "jane.cli:run"

[tool.black]
line-length = 79
target-version = ['py35']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=79


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
